sc2/src/libs/memlib.h

//Copyright Paul Reiche, Fred Ford. 1992-2002

/*
 *  This program is free software; you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation; either version 2 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program; if not, write to the Free Software
 *  Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 */

#ifndef LIBS_MEMLIB_H_
#define LIBS_MEMLIB_H_

#include <stddef.h>

#include "types.h"

#if defined(__cplusplus)
extern "C" {
#endif

#ifdef USE_RUST_MEM
/* Rust memory allocator — extern declarations for rust_* functions */
extern void *rust_hmalloc (size_t size);
extern void rust_hfree (void *p);
extern void *rust_hcalloc (size_t size);
extern void *rust_hrealloc (void *p, size_t size);
extern bool rust_mem_init (void);
extern bool rust_mem_uninit (void);

#define HMalloc(s) rust_hmalloc(s)
#define HFree(p) rust_hfree(p)
#define HCalloc(s) rust_hcalloc(s)
#define HRealloc(p, s) rust_hrealloc(p, s)
#define mem_init() rust_mem_init()
#define mem_uninit() rust_mem_uninit()
#else
/* C memory allocator */
extern bool mem_init (void);
extern bool mem_uninit (void);

extern void *HMalloc (size_t size);
extern void HFree (void *p);
extern void *HCalloc (size_t size);
extern void *HRealloc (void *p, size_t size);
#endif /* USE_RUST_MEM */

#if defined(__cplusplus)
}
#endif

#endif /* LIBS_MEMLIB_H_ */